--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 
 ext {
     AdMobUnitId = 'ca-app-pub-4465131953139681/6515863348'
