--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 
 
 
+apply plugin: 'application'
+apply plugin: 'maven-publish'
+
 buildscript {
-    ext.kotlin_version = '1.7.10'
 
     repositories {
         google()
@@ -12,7 +14,6 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,7 +25,17 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.eyffes'
+            artifactId = 'Ads-Commons'
+            version = "0.9-SNAPSHOT"
+            from components.java
 
+            pom {
+                description = 'First version'
+            }
+        }
+    }
+}
